[frontend] fix : 대시보드 그리드gap 수정

--- a/frontend/src/assets/css/DashBoard/DashBoard.scss
+++ b/frontend/src/assets/css/DashBoard/DashBoard.scss
@@ -78,7 +78,7 @@ $width-sidenav: 240px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-auto-rows: 74px;
-  grid-gap: 20px;
+  grid-gap: 10px;
   margin: 20px;
 }
 
@@ -126,7 +126,7 @@ $width-sidenav: 240px;
   }
 
   &-title {
-    font-size: 21px;
+    font-size: 24px;
     color: $color-java;
     margin: 0;
   }
